--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,7 +7,7 @@ services:
   kafka:
     depends_on:
       - zookeeper
-    build: .
+    build: ./kafka
     ports:
       - "9092:9092"
     environment:
