--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,5 +1,9 @@
 version: '2'
 services:
+  redis:
+    image: redis
+    ports:
+      - "6379:6379"
   zookeeper:
     image: wurstmeister/zookeeper
     ports:
