--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,9 +1,17 @@
 version: '2'
+volumes:
+  data:
 services:
   redis:
     image: redis
     ports:
       - "6379:6379"
+  mongo:
+    image: mongo:3.6
+    ports:
+      - "27017:27017"
+    volumes:
+      - data:/data/db
   zookeeper:
     image: wurstmeister/zookeeper
     ports:
