--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -11,7 +11,7 @@ services:
     ports:
       - "27017:27017"
     volumes:
-      - data:/data/db
+      - ~/data:/data/db
   zookeeper:
     image: wurstmeister/zookeeper
     ports:
