Makes kafka work locally

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -25,10 +25,11 @@ services:
     environment:
       KAFKA_ADVERTISED_HOST_NAME: localhost
       KAFKA_ZOOKEEPER_CONNECT: zookeeper:2181
-      KAFKA_LISTENERS: PLAINTEXT://kafka:29092,DOCKER_EXPOSED://localhost:9092
+      KAFKA_LISTENERS: PLAINTEXT://kafka:29092,DOCKER_EXPOSED://:9092
       KAFKA_ADVERTISED_LISTENERS: PLAINTEXT://kafka:29092,DOCKER_EXPOSED://localhost:9092
       KAFKA_LISTENER_SECURITY_PROTOCOL_MAP: PLAINTEXT:PLAINTEXT,DOCKER_EXPOSED:PLAINTEXT
       KAFKA_INTER_BROKER_LISTENER_NAME: PLAINTEXT
+      KAFKA_TOPIC_METADATA_REFRESH_INTERVAL_MS: -1
     volumes:
       - /var/run/docker.sock:/var/run/docker.sock
   kafka-rest:
