--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -25,44 +25,11 @@ services:
       - "27017:27017"
     volumes:
       - ~/data:/data/db
-  # zookeeper:
-  #   image: wurstmeister/zookeeper
-  #   ports:
-  #     - "2181:2181"
-  # kafka:
-  #   depends_on:
-  #     - zookeeper
-  #   build: ./kafka
-  #   ports:
-  #     - "9092:9092"
-  #   environment:
-  #     KAFKA_ADVERTISED_HOST_NAME: localhost
-  #     KAFKA_ZOOKEEPER_CONNECT: zookeeper:2181
-  #     KAFKA_LISTENERS: PLAINTEXT://kafka:29092,DOCKER_EXPOSED://:9092
-  #     KAFKA_ADVERTISED_LISTENERS: PLAINTEXT://kafka:29092,DOCKER_EXPOSED://localhost:9092
-  #     KAFKA_LISTENER_SECURITY_PROTOCOL_MAP: PLAINTEXT:PLAINTEXT,DOCKER_EXPOSED:PLAINTEXT
-  #     KAFKA_INTER_BROKER_LISTENER_NAME: PLAINTEXT
-  #     KAFKA_TOPIC_METADATA_REFRESH_INTERVAL_MS: -1
-  #   volumes:
-  #     - /var/run/docker.sock:/var/run/docker.sock
-  # kafka-rest:
-  #   depends_on:
-  #     - zookeeper
-  #     - kafka
-  #   environment:
-  #     KAFKA_REST_ZOOKEEPER_CONNECT: zookeeper:2181
-  #     KAFKA_REST_HOST_NAME: rest-proxy
-  #     KAFKA_REST_LISTENERS: http://0.0.0.0:8082
-  #     KAFKA_REST_ACCESS_CONTROL_ALLOW_METHODS: HEAD,POST,GET,OPTIONS
-  #     KAFKA_REST_ACCESS_CONTROL_ALLOW_ORIGIN: "*"
-  #   image: confluentinc/cp-kafka-rest
-  #   ports:
-  #     - "8082:8082"
-  # kafka-topics-ui:
-  #   depends_on:
-  #     - kafka-rest
-  #   environment:
-  #     KAFKA_REST_PROXY_URL: http://localhost:8082
-  #   image: landoop/kafka-topics-ui
-  #   ports:
-  #     - "8000:8000"
+  psql:
+    image: postgres:latest
+    restart: always
+    ports:
+      - 5432:5432
+    environment:
+      POSTGRES_PASSWORD: whatever
+    
