--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -31,5 +31,9 @@ services:
     ports:
       - 5432:5432
     environment:
+      POSTGRES_USER: gcstatus
       POSTGRES_PASSWORD: whatever
+    volumes:
+      - ~/pg-data:/var/lib/postgresql/data
+      - ~/postgres.conf:/etc/postgresql/postgresql.conf
     
